--- a/ChordBox_android/app/src/main/res/values/colors.xml
+++ b/ChordBox_android/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#222222</color>
+    <color name="colorSecondary">#E32E57</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
