STYLE: 벡터 이미지 파일 수정

--- a/ChordBox_android/app/src/main/res/layout/activity_music_record.xml
+++ b/ChordBox_android/app/src/main/res/layout/activity_music_record.xml
@@ -8,8 +8,8 @@
 
     <ImageButton
         android:id="@+id/stop_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="96dp"
         android:backgroundTint="@color/black"
         android:src="@drawable/ic_stop"
@@ -19,8 +19,8 @@
 
     <ImageButton
         android:id="@+id/pause_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:backgroundTint="@color/black"
         android:src="@drawable/ic_pause"
         app:layout_constraintEnd_toEndOf="parent"
