--- a/ChordBox_android/app/src/main/res/layout/item_music_list.xml
+++ b/ChordBox_android/app/src/main/res/layout/item_music_list.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="10dp"
-    app:cardForegroundColor="#262626"
     android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
-    android:layout_marginTop="8dp">
+    app:cardBackgroundColor="#262626"
+    app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp">
 
         <TextView
             android:id="@+id/music_title"
@@ -20,18 +21,20 @@
             android:contentDescription="Record Title"
             android:gravity="center_vertical"
             android:text="New Rec"
+            android:textColor="#E1DDDD"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/music_length"
+            android:id="@+id/music_duration"
             android:layout_width="wrap_content"
             android:layout_height="42dp"
             android:contentDescription="Record length"
             android:gravity="center_vertical"
             android:text="Chord time"
+            android:textColor="#E1DDDD"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/music_title" />
@@ -43,8 +46,9 @@
             android:contentDescription="Record Time"
             android:gravity="center_vertical"
             android:text="Record Time"
+            android:textColor="#E1DDDD"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/music_length" />
+            app:layout_constraintTop_toBottomOf="@id/music_duration" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
