--- a/ChordBox_android/app/src/main/res/values/themes.xml
+++ b/ChordBox_android/app/src/main/res/values/themes.xml
@@ -15,4 +15,9 @@
         <item name="android:textColorPrimary">@color/white</item>
         <!-- Customize your theme here. -->
     </style>
+
+<!--    <style name="imageButtonStyle" parent="Widget.AppCompat.ImageButton">-->
+<!--        <item name="android:layout_height">60dp</item>-->
+<!--        <item name="android:layout_weight">60dp</item>-->
+<!--    </style>-->
 </resources>
