--- a/ChordBox_android/app/src/main/res/layout/activity_music_record.xml
+++ b/ChordBox_android/app/src/main/res/layout/activity_music_record.xml
@@ -60,9 +60,10 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="16dp"
         android:text="Record up to 5 minutes"
-        android:textColor="@color/white"
+        android:textColor="#E1DDDD"
         android:textSize="24sp"
         android:gravity="center"
+        android:background="@drawable/bg_record_limit"
         app:layout_constraintBottom_toTopOf="@+id/record_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
