--- a/ChordBox_android/app/src/main/res/layout/fragment_chord.xml
+++ b/ChordBox_android/app/src/main/res/layout/fragment_chord.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black">
+
+        <com.misaengfly.chordbox.visualizer.PlayerVisualizer
+            android:id="@+id/playerVisualizer"
+            android:layout_width="0dp"
+            android:layout_height="300dp"
+            android:background="@color/black"
+            app:approximateBarDuration="75"
+            app:barWidth="3dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:maxAmp="200"
+            app:spaceBetweenBar="2dp" />
 
         <ImageButton
             android:id="@+id/music_play_btn"
