FEAT : 오디오 실행 없이 m4a 데이터 추출

--- a/ChordBox_android/app/src/main/res/values/attr.xml
+++ b/ChordBox_android/app/src/main/res/values/attr.xml
@@ -9,5 +9,6 @@
         <attr name="approximateBarDuration" format="integer" />
         <attr name="maxAmp" format="float" />
         <attr name="tickMarkColor" format="color"/>
+        <attr name="tickMarkText" format="string"/>
     </declare-styleable>
 </resources>
