--- a/ChordBox_android/app/src/main/res/values/colors.xml
+++ b/ChordBox_android/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#222222</color>
+    <color name="colorSecondary">#E32E57</color>
 </resources>
