ADD : wav 확장자로 음성 녹음

--- a/ChordBox_android/app/src/main/res/values/colors.xml
+++ b/ChordBox_android/app/src/main/res/values/colors.xml
@@ -7,7 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#ddd</color>
 
     <color name="colorPrimary">#222222</color>
     <color name="colorSecondary">#E32E57</color>
+
+    <color name="dialog_background">#262626</color>
+
+    <color name="text_color">#E1DDDD</color>
 </resources>
