--- a/ChordBox_android/app/src/main/res/layout/fragment_chord.xml
+++ b/ChordBox_android/app/src/main/res/layout/fragment_chord.xml
@@ -10,7 +10,8 @@
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:background="@color/black"
-        app:barWidth="3dp"
+        app:approximateBarDuration="75"
+        app:barWidth="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
