--- a/ChordBox_android/app/src/main/res/layout/activity_main.xml
+++ b/ChordBox_android/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
+        android:background="@color/black"
         app:layout_constraintBottom_toTopOf="@id/fragment_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
