--- a/ChordBox_android/app/src/main/res/layout/activity_record.xml
+++ b/ChordBox_android/app/src/main/res/layout/activity_record.xml
@@ -73,7 +73,7 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="16dp"
         android:text="Record up to 5 minutes"
-        android:textColor="#E1DDDD"
+        android:textColor="#797575"
         android:textSize="24sp"
         android:gravity="center"
         android:background="@drawable/bg_record_limit"
