--- a/ChordBox_android/app/src/main/res/layout/fragment_chord.xml
+++ b/ChordBox_android/app/src/main/res/layout/fragment_chord.xml
@@ -1,20 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/playerVisualizer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/music_date_tv">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/bg_slider"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/music_iv"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="100dp"
+            app:cardElevation="4dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/splash_image"
+                android:scaleType="fitXY"/>
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/shape_circle"
+                android:layout_gravity="center"/>
+        </androidx.cardview.widget.CardView>
+    </FrameLayout>
+
     <com.misaengfly.chordbox.visualizer.PlayerVisualizer
         android:id="@+id/playerVisualizer"
         android:layout_width="0dp"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
+        android:layout_marginBottom="32dp"
         android:background="@color/black"
         app:approximateBarDuration="75"
         app:barWidth="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/music_play_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:maxAmp="200"
         app:spaceBetweenBar="2dp" />
 
@@ -50,5 +88,25 @@
         app:layout_constraintStart_toEndOf="@+id/music_play_btn"
         app:layout_constraintTop_toTopOf="@+id/music_play_btn"
         app:srcCompat="@drawable/ic_fast_forward" />
+
+    <TextView
+        android:id="@+id/music_name_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
+        android:text="TextView"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/music_date_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="@+id/music_name_tv"
+        app:layout_constraintTop_toBottomOf="@+id/music_name_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
