--- a/ChordBox_android/app/src/main/res/values/themes.xml
+++ b/ChordBox_android/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Text Color -->
         <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColor">@color/text_color</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
