--- a/ChordBox_android/app/src/main/res/layout/dialog_choose.xml
+++ b/ChordBox_android/app/src/main/res/layout/dialog_choose.xml
@@ -14,6 +14,7 @@
         android:text="Choose one"
         android:textColor="@color/text_color"
         android:textSize="26sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,9 +25,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/choose_tv">
@@ -52,4 +51,36 @@
             android:textColor="@color/text_color"
             android:textSize="26sp" />
     </RadioGroup>
+
+    <TextView
+        android:id="@+id/choose_no_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@android:color/transparent"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:text="No"
+        android:textAlignment="center"
+        android:textSize="26sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/choose_yes_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/choose_radio_group" />
+
+    <TextView
+        android:id="@+id/choose_yes_btn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@android:color/transparent"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:text="Yes"
+        android:textAlignment="center"
+        android:textColor="@color/colorSecondary"
+        android:textSize="26sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/choose_no_btn"
+        app:layout_constraintTop_toTopOf="@+id/choose_no_btn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
