--- a/ChordBox_android/app/src/main/res/layout/activity_record.xml
+++ b/ChordBox_android/app/src/main/res/layout/activity_record.xml
@@ -10,13 +10,14 @@
         android:id="@+id/record_file_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:text="file Name"
         android:textColor="#797575"
         android:textSize="26sp"
+        app:layout_constraintBottom_toTopOf="@+id/record_time_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/record_time_view"
@@ -28,58 +29,73 @@
         android:textColor="@color/white"
         android:textSize="36sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/recorder_visualizer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/record_file_name_tv" />
 
+    <com.misaengfly.chordbox.visualizer.RecorderVisualizer
+        android:id="@+id/recorder_visualizer"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4" />
+
     <ImageButton
         android:id="@+id/stop_btn"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="96dp"
         android:backgroundTint="@color/black"
         android:src="@drawable/ic_stop"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pause_btn"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/record_warning" />
 
     <ImageButton
         android:id="@+id/pause_btn"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:backgroundTint="@color/black"
         android:src="@drawable/ic_pause"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/stop_btn"
         app:layout_constraintTop_toTopOf="@+id/stop_btn" />
 
     <ImageButton
         android:id="@+id/record_btn"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="96dp"
         android:backgroundTint="@color/black"
         android:src="@drawable/ic_radio_checked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/record_warning" />
 
     <TextView
         android:id="@+id/record_warning"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="40dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="16dp"
+        android:background="@drawable/bg_record_limit"
+        android:gravity="center"
         android:text="Record up to 5 minutes"
         android:textColor="#797575"
         android:textSize="24sp"
-        android:gravity="center"
-        android:background="@drawable/bg_record_limit"
-        app:layout_constraintBottom_toTopOf="@+id/record_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recorder_visualizer" />
 
     <ImageView
         android:id="@+id/recording_view"
