ADD: Youtube URL 전송하는 로직 추가

--- a/ChordBox_android/app/src/main/res/layout/bottom_sheet_youtube_url.xml
+++ b/ChordBox_android/app/src/main/res/layout/bottom_sheet_youtube_url.xml
@@ -32,7 +32,7 @@
     <Button
         android:id="@+id/send_url_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
