Fix : 코드 보여주는 뷰 개선
- 코드가 깜박거리면서 보이는 에러 개선

--- a/ChordBox_android/app/src/main/res/layout/fragment_chord.xml
+++ b/ChordBox_android/app/src/main/res/layout/fragment_chord.xml
@@ -63,6 +63,7 @@
         android:layout_marginBottom="32dp"
         android:background="@null"
         android:src="@drawable/ic_play"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/music_forward_btn"
         app:layout_constraintStart_toEndOf="@+id/music_backward_btn" />
