--- a/ChordBox_android/app/src/main/res/layout/bottom_sheet_select.xml
+++ b/ChordBox_android/app/src/main/res/layout/bottom_sheet_select.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="새 코드 만들기"
+        android:text="Get new chords"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="녹음이나 Youtube Url 업로드로 코드를 받아보세요.\n한 번에 최데 5분까지 가능해요."
+        android:text="Record or upload a YouTube URL to get new chords."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/select_title_tv" />
