--- a/ChordBox_android/app/src/main/res/layout/fragment_music_list.xml
+++ b/ChordBox_android/app/src/main/res/layout/fragment_music_list.xml
@@ -26,6 +26,7 @@
             android:layout_height="60dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            app:fabCustomSize="60dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/ic_add" />
