--- a/ChordBox_android/app/src/main/res/layout/dialog_stop.xml
+++ b/ChordBox_android/app/src/main/res/layout/dialog_stop.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="96dp"
-        android:text="Stop recording?"
+        android:text="Save recording?"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
