--- a/ChordBox_android/app/src/main/res/layout/item_music_list.xml
+++ b/ChordBox_android/app/src/main/res/layout/item_music_list.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -12,14 +14,15 @@
             type="com.misaengfly.chordbox.musiclist.MusicAdapter.MusicItemListener" />
     </data>
 
-    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/music_item_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:onClick="@{() -> clickListener.onClick(music)}"
+        android:longClickable="true"
         app:cardBackgroundColor="#262626"
         app:cardCornerRadius="10dp">
 
@@ -30,7 +33,7 @@
 
             <TextView
                 android:id="@+id/music_title"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="42dp"
                 android:contentDescription="Record Title"
                 android:gravity="center_vertical"
@@ -38,18 +41,20 @@
                 android:textColor="#E1DDDD"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/music_duration"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="42dp"
                 android:contentDescription="Record length"
                 android:gravity="center_vertical"
                 android:text="@{music.duration}"
                 android:textColor="#E1DDDD"
                 android:textSize="18sp"
+                app:layout_constraintEnd_toStartOf="@id/pupup_container"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/music_title" />
 
@@ -64,6 +69,15 @@
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/music_duration" />
+
+            <TextView
+                android:id="@+id/pupup_container"
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/music_duration"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/music_duration"
+                app:layout_constraintTop_toTopOf="@+id/music_duration" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
