--- a/ChordBox_android/app/src/main/res/values/themes.xml
+++ b/ChordBox_android/app/src/main/res/values/themes.xml
@@ -23,4 +23,9 @@
         <item name="hintTextColor">@color/colorSecondary</item>
         <item name="colorControlActivated">@color/colorSecondary</item>
     </style>
+
+    <style name="PopupMenuStyle" parent="Widget.AppCompat.PopupMenu.Overflow">
+        <item name="android:itemBackground">@color/colorSecondary</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
 </resources>
