--- a/ChordBox_android/app/src/main/res/layout/activity_record.xml
+++ b/ChordBox_android/app/src/main/res/layout/activity_record.xml
@@ -39,6 +39,7 @@
         android:id="@+id/recorder_visualizer"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        app:maxAmp="100"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.4" />
