Fix : 시간에 맞게 코드가 보여지도록 수정

--- a/ChordBox_android/app/src/main/res/layout/bottom_sheet_select.xml
+++ b/ChordBox_android/app/src/main/res/layout/bottom_sheet_select.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Get new chords"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -54,6 +56,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:text="Record"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/select_record_ib"
         app:layout_constraintStart_toStartOf="@+id/select_record_ib"
@@ -65,6 +69,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Upload Youtube URL"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/select_url_upload_ib"
         app:layout_constraintStart_toStartOf="@+id/select_url_upload_ib"
         app:layout_constraintTop_toBottomOf="@+id/select_url_upload_ib" />
