--- a/ChordBox_android/app/src/main/res/layout/bottom_sheet_youtube_url.xml
+++ b/ChordBox_android/app/src/main/res/layout/bottom_sheet_youtube_url.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
-    android:orientation="vertical"
-    tools:viewBindingIgnore="true">
+    android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/send_url_text_container"
