--- a/ChordBox_android/app/src/main/res/drawable/bg_url_selected_item.xml
+++ b/ChordBox_android/app/src/main/res/drawable/bg_url_selected_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#C4C4C4"/>
-    <corners android:radius="15dp"/>
-    <size android:height="30dp" android:width="30dp"/>
+    <solid android:color="#CD073C"/>
+    <corners android:radius="60dp"/>
+    <size android:height="60dp" android:width="60dp"/>
 </shape>
