--- a/ChordBox_android/app/src/main/res/layout/item_url_chord.xml
+++ b/ChordBox_android/app/src/main/res/layout/item_url_chord.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@null">
+    android:layout_height="80dp"
+    android:background="@drawable/bg_url_chord_item"
+    android:orientation="horizontal"
+    android:gravity="center">
 
     <TextView
         android:id="@+id/item_url_tv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:hint="code"
+        android:gravity="center"
+        android:background="@null" />
 </LinearLayout>
