--- a/ChordBox_android/app/src/main/res/layout/item_music_list.xml
+++ b/ChordBox_android/app/src/main/res/layout/item_music_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -21,8 +21,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:onClick="@{() -> clickListener.onClick(music)}"
         android:longClickable="true"
+        android:onClick="@{() -> clickListener.onClick(music)}"
         app:cardBackgroundColor="#262626"
         app:cardCornerRadius="10dp">
 
@@ -37,13 +37,13 @@
                 android:layout_height="42dp"
                 android:contentDescription="Record Title"
                 android:gravity="center_vertical"
-                android:text="@{music.fileName}"
                 android:textColor="#E1DDDD"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:title="@{music}" />
 
             <TextView
                 android:id="@+id/music_duration"
