--- a/ChordBox_android/app/src/main/res/layout/item_music_list.xml
+++ b/ChordBox_android/app/src/main/res/layout/item_music_list.xml
@@ -34,12 +34,13 @@
             <TextView
                 android:id="@+id/music_title"
                 android:layout_width="0dp"
-                android:layout_height="42dp"
+                android:layout_height="wrap_content"
                 android:contentDescription="Record Title"
                 android:gravity="center_vertical"
                 android:textColor="#E1DDDD"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:minHeight="42dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
