--- a/ChordBox_android/app/src/main/res/layout/bottom_sheet_info.xml
+++ b/ChordBox_android/app/src/main/res/layout/bottom_sheet_info.xml
@@ -34,7 +34,9 @@
         android:id="@+id/info_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="64dp"
         android:text="We'll let you know when the delivery is complete."
         android:textSize="16sp"
