--- a/ChordBox_android/app/src/main/res/layout/bottom_sheet_select.xml
+++ b/ChordBox_android/app/src/main/res/layout/bottom_sheet_select.xml
@@ -20,9 +20,12 @@
 
     <TextView
         android:id="@+id/select_description_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center_horizontal"
         android:text="Record or upload a YouTube URL to get new chords."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
