--- a/ChordBox_android/app/src/main/res/layout/activity_record.xml
+++ b/ChordBox_android/app/src/main/res/layout/activity_record.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black">
@@ -39,24 +38,24 @@
         android:id="@+id/recorder_visualizer"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        app:maxAmp="100"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4" />
+        app:layout_constraintVertical_bias="0.4"
+        app:maxAmp="100" />
 
     <ImageButton
         android:id="@+id/stop_btn"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="96dp"
         android:backgroundTint="@color/black"
         android:src="@drawable/ic_stop"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pause_btn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/record_warning" />
+        app:layout_constraintTop_toBottomOf="@+id/record_warning"
+        app:layout_constraintVertical_bias="0.2" />
 
     <ImageButton
         android:id="@+id/pause_btn"
@@ -74,18 +73,18 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="96dp"
         android:backgroundTint="@color/black"
         android:src="@drawable/ic_radio_checked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/record_warning" />
+        app:layout_constraintTop_toBottomOf="@+id/record_warning"
+        app:layout_constraintVertical_bias="0.2" />
 
     <TextView
         android:id="@+id/record_warning"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="40dp"
