--- a/ChordBox_android/app/src/main/res/values/themes.xml
+++ b/ChordBox_android/app/src/main/res/values/themes.xml
@@ -15,6 +15,7 @@
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColor">@color/text_color</item>
         <!-- Customize your theme here. -->
+        <item name="android:fontFamily">@font/app_font</item>
     </style>
 
     <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
@@ -27,5 +28,9 @@
     <style name="PopupMenuStyle" parent="Widget.AppCompat.PopupMenu.Overflow">
         <item name="android:itemBackground">@color/colorSecondary</item>
         <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="customTextViewFontStyle" parent="Widget.MaterialComponents.TextView">
+        <item name="android:fontFamily">@font/app_font</item>
     </style>
 </resources>
