Fix :    - Record 바로 업데이트 하기    - 동일한 URL 입력 방지 에러

--- a/ChordBox_android/app/src/main/res/layout/bottom_sheet_info.xml
+++ b/ChordBox_android/app/src/main/res/layout/bottom_sheet_info.xml
@@ -40,6 +40,7 @@
         android:layout_marginBottom="64dp"
         android:text="We'll let you know when the delivery is complete."
         android:textSize="16sp"
+        android:gravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
