--- a/ChordBox_android/app/src/main/res/layout/item_music_list.xml
+++ b/ChordBox_android/app/src/main/res/layout/item_music_list.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
             name="music"
             type="com.misaengfly.chordbox.musiclist.MusicItem" />
@@ -37,10 +35,10 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="Record Title"
                 android:gravity="center_vertical"
+                android:minHeight="42dp"
                 android:textColor="#E1DDDD"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:minHeight="42dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
