--- a/ChordBox_android/app/src/main/res/layout/item_url_chord.xml
+++ b/ChordBox_android/app/src/main/res/layout/item_url_chord.xml
@@ -3,14 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:background="@drawable/bg_url_chord_item"
-    android:orientation="horizontal"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/item_url_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="code"
-        android:gravity="center"
-        android:background="@null" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="2dp"
+        android:background="@null"
+        android:gravity="center" />
 </LinearLayout>
