--- a/ChordBox_android/app/src/main/res/values/colors.xml
+++ b/ChordBox_android/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="dialog_background">#262626</color>
 
     <color name="text_color">#E1DDDD</color>
+    <color name="code_background">#CD073C</color>
 </resources>
