--- a/ChordBox_android/app/src/main/res/layout/fragment_url_chord.xml
+++ b/ChordBox_android/app/src/main/res/layout/fragment_url_chord.xml
@@ -16,7 +16,7 @@
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
-        android:text="Music Name"
+        android:hint="Music Name"
         android:textSize="25dp"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="Music Created Date"
+        android:hint="Music Created Date"
         android:textSize="14dp"
         app:layout_constraintStart_toStartOf="@+id/url_music_name_tv"
         app:layout_constraintTop_toBottomOf="@+id/url_music_name_tv"
